# SDOH-Signalboard

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  scratch.py  upload_synthea.py
.streamlit/: config.toml
demo_data/: enrich_synthea.py  generate_patients.py
demo_data/fhir_bundles/: patient_001.json  patient_002.json  patient_003.json  patient_004.json  patient_005.json  patient_006.json  patient_008.json  patient_010.json  patient_011.json  patient_012.json  patient_013.json  patient_014.json  patient_015.json  patient_016.json  patient_017.json  patient_018.json  patient_020.json  patient_021.json  patient_022.json  patient_023.json  patient_024.json  patient_025.json  patient_027.json  patient_028.json  patient_029.json  patient_030.json
demo_data/fhir_bundles_backup/: patient_001.json  patient_002.json  patient_003.json  patient_004.json  patient_005.json  patient_006.json  patient_007.json  patient_008.json  patient_009.json  patient_010.json  patient_011.json  patient_012.json  patient_013.json  patient_014.json  patient_015.json  patient_016.json  patient_017.json  patient_018.json  patient_019.json  patient_020.json  patient_021.json  (+9 more)
docs/: PROJECT_PLAN.md  TODO.md  architecture.md  user_workflow.md
domain/: care_plan_builder.py  scoring.py
pages/: 1_dashboard.py  2_clinical_editor.py  3_care_plan.py
scripts/: seed_azure_fhir.py  upload_data.py
services/: fhir_client.py  patient_repository.py
tests/: test_care_plan_builder.py  test_fhir_writer.py  test_patient_repository.py  test_scoring.py  test_scoring_extended.py
(+1 files in other folders)
